--- a/config-server-client-development.properties
+++ b/config-server-client-development.properties
@@ -1,1 +1,12 @@
 msg = Hello world - this is from config server – Development environment
+text.copyright=me.org
+
+# ===============================
+# DATABASE
+# ===============================
+
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+spring.datasource.url=jdbc:mysql://localhost:3306/dev
+spring.datasource.username=root
+spring.datasource.password=12345
